// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuGroup - JSX label 1`] = `
.c3 {
  list-style-type: none;
}

.c2 {
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #FFFFFF;
  color: #262D33;
}

.c1 {
  box-shadow: none;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
  margin-bottom: 0.25rem;
}

.c5 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c4 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 button,
.c4 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  outline: none;
  padding-left: calc(1rem - 4px);
}

.c4:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c4:hover .c7 {
  color: #C1C6CC;
}

.c4 .c7 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c6 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

<li
  className="c0 "
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2"
      fontSize="small"
      fontWeight="semiBold"
    >
      <div
        className=""
      >
        Questions
      </div>
    </h2>
  </div>
  <ul
    className="c3"
    type="none"
  >
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          what?
        </div>
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          who?
        </div>
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          where?
        </div>
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - label 1`] = `
.c3 {
  list-style-type: none;
}

.c2 {
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #FFFFFF;
  color: #262D33;
}

.c1 {
  box-shadow: none;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
  margin-bottom: 0.25rem;
}

.c5 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c4 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 button,
.c4 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  outline: none;
  padding-left: calc(1rem - 4px);
}

.c4:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c4:hover .c7 {
  color: #C1C6CC;
}

.c4 .c7 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c6 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

<li
  className="c0 "
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2"
      fontSize="small"
      fontWeight="semiBold"
    >
      Questions
    </h2>
  </div>
  <ul
    className="c3"
    type="none"
  >
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          what?
        </div>
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          who?
        </div>
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          where?
        </div>
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - labelProps & labelStyles 1`] = `
.c3 {
  list-style-type: none;
}

.c2 {
  font-size: 1.5625rem;
  font-weight: 600;
  line-height: 2.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #FFFFFF;
  color: #262D33;
}

.c1 {
  box-shadow: none;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
  margin-bottom: 0.25rem;
}

.c5 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c4 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 button,
.c4 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  outline: none;
  padding-left: calc(1rem - 4px);
}

.c4:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c4:hover .c7 {
  color: #C1C6CC;
}

.c4 .c7 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c6 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

<li
  className="c0 "
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2"
      fontSize="xxlarge"
      fontWeight="semiBold"
      style={
        Object {
          "color": "rebeccapurple",
        }
      }
    >
      Questions
    </h2>
  </div>
  <ul
    className="c3"
    type="none"
  >
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          what?
        </div>
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          who?
        </div>
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c5"
        role="menuitem"
      >
        <div
          className="c6"
        >
          where?
        </div>
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - menu customization 1`] = `
.c1 {
  list-style-type: none;
}

.c5 {
  color: #9785F2;
  margin-right: 0.5rem;
  width: 20px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover,
.c3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c7:hover .c6 {
  color: #C1C6CC;
}

.c7 .c6 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c2 {
  background-color: #4F2ABA;
  color: #BFB2FF;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c2 button,
.c2 a {
  border-left-width: 10px;
  border-left-style: solid;
  border-left-color: transparent;
  outline: none;
  padding-left: calc(1rem - 10px);
}

.c2:hover {
  background: #341C7A;
  color: #FFFFFF;
  font-size: #FFFFFF;
  font-weight: #FFFFFF;
}

.c2:hover .c6 {
  color: #E8E5FF;
}

.c2 .c6 {
  color: #9785F2;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 {
  display: grid;
  grid-template-columns: 20px 1fr;
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: #4F2ABA;
}

<li
  className="c0 "
>
  <ul
    className="c1"
    type="none"
  >
    <li
      bg="#4F2ABA"
      className="c2"
      color="#BFB2FF"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c3"
        role="menuitem"
      >
        <div
          className="c4"
        >
          <div
            className="c5 c6 "
            color="#9785F2"
            size={20}
          >
            <svg
              fill="currentColor"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
            >
              <title>
                Logo Rings
              </title>
              <path
                clipRule="evenodd"
                d="M11.266 2.249a1.747 1.747 0 11-.08 2.943l.746-.746a.737.737 0 10-.47-.47l-.746.746a1.746 1.746 0 01.55-2.473zm-.344 3.204a2.715 2.715 0 01.214 2.942c-.219.4-.535.74-.918.987L9.69 8.095a1.389 1.389 0 00.263-1.675l.968-.967zM8.759 8.477h-.027a1.39 1.39 0 11.762-2.551l.96-.959a2.731 2.731 0 10-1.17 4.797l-.525-1.287zm1.652 1.376a6.191 6.191 0 011.789-.262l-.004-.001a6.196 6.196 0 11-2.726.631l.768 1.87a4.181 4.181 0 10.939-.363l-.767-1.875z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </div>
          Looker
        </div>
      </button>
    </li>
    <li
      bg="#4F2ABA"
      className="c2"
      color="#BFB2FF"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c3"
        role="menuitem"
      >
        <div
          className="c4"
        >
          <div
            className="c5 c6 "
            color="#9785F2"
            size={20}
          >
            <svg
              fill="currentColor"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
            >
              <title>
                Validate
              </title>
              <path
                d="M11.749.09L2 4.423v6.499c0 6.01 4.16 11.633 9.749 12.998 5.589-1.365 9.749-6.986 9.749-12.998v-6.5L11.749.09zM9.582 17.42l-4.333-4.333 1.527-1.527 2.805 2.794 7.138-7.138 1.527 1.538-8.666 8.665h.002z"
                fill="currentColor"
              />
            </svg>
          </div>
          Validate
        </div>
      </button>
    </li>
    <li
      bg="#4F2ABA"
      className="c2"
      color="#BFB2FF"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c3"
        role="menuitem"
      >
        <div
          className="c4"
        >
          <div
            className="c5 c6 "
            color="#9785F2"
            size={20}
          >
            <svg
              fill="currentColor"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
            >
              <title>
                Chart Pie
              </title>
              <path
                d="M11 2v20c-5.07-.5-9-4.79-9-10s3.93-9.5 9-10zm2.03 0v8.99H22c-.47-4.74-4.24-8.52-8.97-8.99zm0 11.01V22c4.74-.47 8.5-4.25 8.97-8.99h-8.97z"
                fill="currentColor"
              />
            </svg>
          </div>
          Pizza!
        </div>
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - menu customization 2`] = `undefined`;

exports[`MenuGroup 1`] = `
.c1 {
  list-style-type: none;
}

.c3 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover,
.c3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c2 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c2 button,
.c2 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  outline: none;
  padding-left: calc(1rem - 4px);
}

.c2:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c2:hover .c5 {
  color: #C1C6CC;
}

.c2 .c5 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

<li
  className="c0 "
>
  <ul
    className="c1"
    type="none"
  >
    <li
      bg="#FFFFFF"
      className="c2"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="c3"
        role="menuitem"
      >
        <div
          className="c4"
        >
          who!
        </div>
      </button>
    </li>
  </ul>
</li>
`;
